--- a/brasil.html
+++ b/brasil.html
@@ -6,12 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>CWB Notícias-BRASIL</title>
+    <title>CWB Notícias</title>
 </head>
 
-<body class="brasil">
+<body id="duas-colunas" class="home">
+    <!--Início container-->
     <div id="container">
 
+        <!--Início topo-->
         <div id="topo">
             <h1 class="logo"></h1>
             <ul id="navegacao">
@@ -43,9 +45,28 @@
                     <a id="fotos" href="fotos.html">Fotos</a>
                 </li>
             </ul>
+        </div>      <!--Fim topo-->
+
+        <!--Início conteúdo-->
+        <div id="conteudo">
+           
+            <div id="primario">Primário</div>
+           <!-- <div id="secundario">Secundário</div>-->
+            <div id="lateral">Lateral</div>
+
+        </div>        <!--Fim conteúdo-->
+
+    </div>      <!--Fim container-->
+
+    <!--Início Rodapé-->
+    <div id="container-rodape" style="clear: both;">
+
+        <div id="dodape">
+            &copy; Copyrigth 2023-2023 CWB Notícias
         </div>
 
-    </div>
+    </div>      <!--Fim Rodapé-->
+
 </body>
 
 </html>
