--- a/index.html
+++ b/index.html
@@ -56,11 +56,7 @@
                 <div class="caixa">
                     <h2>Entrevistas</h2>
                     <div class="caixa-conteudo">
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
+
                     </div>
                 </div>
 
@@ -72,11 +68,7 @@
                 <div class="caixa">
                     <h2>Entrevistas</h2>
                     <div class="caixa-conteudo">
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
+
                     </div>
                 </div>
                 
@@ -88,11 +80,30 @@
                 <div class="caixa">
                     <h2>Entrevistas</h2>
                     <div class="caixa-conteudo">
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
+                        <ul>
+                            <li><a href="">Ana Claudia</a></li>
+                            <li><a href="">Marcio Franco</a></li>
+                            <li><a href="">Ellie Ferreira</a></li>
+                            <li><a href="">Alécio Camargo</a></li>
+                            <li><a href="">Erison Lima</a></li>
+                            <li><a href="">Ana Rocha</a></li>
+                            <li><a href="">Maria Gaio</a></li>
+                            <li><a href="">Ulisses Costa</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="caixa">
+                    <h2>News</h2>
+                    <div class="caixa-conteudo">
+
+                        <form>
+                            <label for="email">Email:</label>
+                            <input type="text" name="email" id="email" placeholder="E-mail">
+                        </form>
+                    </div>
+                    <div>
+                        <input class="submit" type="submit" value="Cadastrar">
                     </div>
                 </div>
 
