--- a/nova-legislacao.html
+++ b/nova-legislacao.html
@@ -63,47 +63,14 @@
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque nesciunt dolorum at nisi
                             culpa voluptatem minus beatae consequuntur deserunt neque, quo dolorem voluptatum iure
                             inventore rem repellat et eum alias.
+                        
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque nesciunt dolorum at nisi
+                            culpa voluptatem minus beatae consequuntur deserunt neque, quo dolorem voluptatum iure
+                            inventore rem repellat et eum alias.
                         </p>
-                        <a href="nova-legislacao.html">Leia mais</a>
                     </div>
                 </div>    <!--FIm caixa destaque-->
             
-                <!--Início caixa mundo-->    
-                <div class="caixa">
-                    <h2>Mundo</h2>
-                    <div class="caixa-conteudo">
-                        <ul id="lista-noticias">
-                            <li>
-                                <a href="">
-                                    <img src="imagens/tecnologia.jpg" width="80">
-                                    <h3>Novas tecnologias</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <img src="imagens/tecnologia.jpg" width="80">
-                                    <h3>Novas tecnologias</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <img src="imagens/tecnologia.jpg" width="80">
-                                    <h3>Novas tecnologias</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <img src="imagens/tecnologia.jpg" width="80">
-                                    <h3>Novas tecnologias</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>     <!--FIm caixa mundo-->
 
             </div> <!--Fim primário-->
 
